Changes title of html page

--- a/js/index.html
+++ b/js/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset = "UTF-8">
-        <title>Demo</title>
+        <meta charset="utf-8">
+        <title>Functional Programming Demo</title>
         <script src="closures.js"></script>
         <script src="currying.js"></script>
         <script src="higherOrderFunctions.js"></script>
